[gd_scene load_steps=7 format=3 uid="uid://dn7ruopjurr62"]

[ext_resource type="Shader" uid="uid://cvu8ucill03dy" path="res://shaders/menu.gdshader" id="1_5evyv"]
[ext_resource type="PackedScene" uid="uid://bcq45ypkaysta" path="res://scenes/jugador.tscn" id="1_svaqf"]
[ext_resource type="Script" uid="uid://j7y4uc0ptpcw" path="res://scripts/enemy_spawner.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://cja7mxo22kr21" path="res://scripts/hud.gd" id="4_lbhrr"]

[sub_resource type="GDScript" id="GDScript_lbhrr"]
script/source = "extends Node2D


var enemy_scene = preload(\"res://scenes/enemigo.tscn\") 

func spawn_enemy(position: Vector2):
	var enemy = enemy_scene.instantiate()
	enemy.global_position = position
	add_child(enemy)
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70w4t"]
shader = ExtResource("1_5evyv")

[node name="Game" type="Node2D"]
script = SubResource("GDScript_lbhrr")

[node name="BackgroundGenerator" type="Node2D" parent="."]

[node name="Fondo" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_70w4t")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1023.0
offset_top = -451.0
offset_right = 978.0
offset_bottom = 481.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
color = Color(0, 0, 0, 1)

[node name="Jugador" parent="." instance=ExtResource("1_svaqf")]

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_lnu2h")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_lbhrr")

[node name="HealthContainer" type="VBoxContainer" parent="HUD"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthLabel" type="Label" parent="HUD/HealthContainer"]
layout_mode = 2

[node name="HeartsContainer" type="HBoxContainer" parent="HUD/HealthContainer"]
layout_mode = 2

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="PauseMenu"]
offset_left = 458.0
offset_top = -289.0
offset_right = 498.0
offset_bottom = -249.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
